# P2P-Distributed-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  command.md  context_script.js  directory_with_contents.txt  index.html  test.cpp
config/: development_config.json  production_config.json  staging_config.json
src/: config_manager.h  main.cpp
src/database/: postgresql_database.h
src/networking/: network_manager.cpp  peer_discovery.h  tcp_connection.h  udp_connection.h
